[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/superWHITEbar.png" type="Texture" id=1]
[ext_resource path="res://HealthBar.gd" type="Script" id=3]

[node name="HealthBar" type="Control"]
visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_right = 16.0
margin_bottom = 50.0
rect_rotation = 90.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 3
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.898039, 0.368627, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOver" type="TextureProgress" parent="."]
margin_right = 16.0
margin_bottom = 50.0
rect_rotation = 90.0
value = 100.0
texture_progress = ExtResource( 1 )
fill_mode = 3
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
